Add header style

--- a/src/sass/base/_basic.scss
+++ b/src/sass/base/_basic.scss
@@ -10,7 +10,25 @@ a {
   text-decoration: none;
 }
 
-.container {
-  max-width: 1470px;
+
+.link {
+  width: 183px;
+  height: 47px;
+  color: #ffffff;
+  border-radius: 24px;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
+  border: 2px solid #ffffff;
+  background-color: $main-color;
+
+  a {
+    color: #ffffff;
+    font-family: Raleway;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0.35px;
+    margin: 0 auto;
+  }
 }
