--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -15,3 +15,27 @@ h1 {
   margin: 72px auto 0;
   padding: 0;
 }
+
+.about-us {
+  padding: 100px 0;
+}
+
+.dolor-sit {
+  padding: 165px 0;
+}
+
+.dolor-sit, .lorem-grey {
+
+  .link, span {
+    margin-top: 74px;
+  }
+}
+
+.right {
+  margin-left: auto;
+}
+
+.center {
+  margin: 0 auto;
+  text-align: center;
+}
