--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,11 +4,12 @@ header {
     size: cover;
     position: center;
   }
+  padding-top: 50px;
 
   h1 {
     text-align: center;
     color: #ffffff;
-    font-family: "Raleway - Thin";
+    font-family: 'Raleway', sans-serif;
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 1.5px;
@@ -25,6 +26,7 @@ header {
       font-family: "Proxima Nova Lt";
       font-weight: 300;
       letter-spacing: 0.6px;
+      margin-bottom: 63px;
     }
 
   }
@@ -39,7 +41,7 @@ header {
     justify-content: space-between;
     li a {
       color: #ffffff;
-      font-family: Raleway;
+      font-family: 'Raleway', sans-serif;
       font-size: 14px;
       font-weight: 700;
       line-height: 24px;
@@ -49,7 +51,6 @@ header {
     }
 
   }
-
 
 }
 
