--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,63 +4,33 @@ header {
     size: cover;
     position: center;
   }
-  padding-top: 50px;
-
-  h1 {
-    text-align: center;
-    color: #ffffff;
-    font-family: 'Raleway', sans-serif;
-    font-size: 60px;
-    font-weight: 400;
-    letter-spacing: 1.5px;
-  }
-
   .container {
     position: relative;
   }
+}
 
-  .headline {
-    h3 {
-      color: #ffffff;
-      text-align: center;
-      font-family: "Proxima Nova Lt";
-      font-weight: 300;
-      letter-spacing: 0.6px;
-      margin-bottom: 63px;
-    }
-
+.headline {
+  h2 {
+    color: #ffffff;
   }
-
-  nav {
-    display: flex;
-    align-items: center;
+  h3 {
+    color: #ffffff;
+    margin-bottom: 63px;
   }
-
-  .menu {
-    display: flex;
-    justify-content: space-between;
-    .click {
-      color: #ffffff;
-      font-family: 'Raleway', sans-serif;
-      font-size: 14px;
-      font-weight: 700;
-      line-height: 24px;
-      text-transform: uppercase;
-      letter-spacing: 0.35px;
-      padding: 0 30px;
-    }
+  div {
+    background: none;
   }
 }
 
-.feature {
-  background: none;
+nav {
+  display: flex;
+  align-items: center;
 }
 
 .slider {
   width: 100px;
   display: flex;
   justify-content: space-between;
-
   li {
     width: 10px;
     height: 10px;
@@ -74,75 +44,9 @@ header {
   }
 }
 
-.arrow-right {
-  width: 1px;
-  height: 30px;
-  display: block;
-  background-color: #ffffff;
-  transform: rotate(-45deg);
-  margin-top: -26px;
-  margin-right: 10px;
-  position: absolute;
-  right: 0;
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 50px;
 }
-
-.arrow-right::before {
-  content: '';
-  width: 1px;
-  height: 30px;
-  display: block;
-  background-color: #ffffff;
-  transform: rotate(90deg);
-  margin-top: 15px;
-  margin-left: -15px;
-}
-
-.arrow-left {
-  width: 1px;
-  height: 30px;
-  display: block;
-  background-color: #ffffff;
-  transform: rotate(135deg);
-  margin-left: 10px;
-  margin-top: -5px;
-  left: 0;
-  position: absolute;
-}
-
-.arrow-left::before {
-  content: '';
-  width: 1px;
-  height: 30px;
-  display: block;
-  background-color: #ffffff;
-  transform: rotate(90deg);
-  margin-top: 15px;
-  margin-left: -15px;
-}
-
-.arrow-center {
-  width: 1px;
-  height: 20px;
-  display: block;
-  background-color: #ffffff;
-  transform: rotate(45deg);
-  margin-left: 10px;
-  position: absolute;
-  left: 50%;
-  bottom: 58px;
-  opacity: 0.5;
-}
-
-.arrow-center::before {
-  content: '';
-  width: 1px;
-  height: 20px;
-  display: block;
-  background-color: #ffffff;
-  transform: rotate(90deg);
-  margin-top: 10px;
-  margin-left: -10px;
-}
-
-
-
