--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,9 +3,14 @@
 @import 'utils/variables';
 
 @import 'base/basic';
+@import 'base/typography';
 
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/footer';
 
 @import 'pages/home';
+
+@import 'components/buttons';
+@import 'components/icons';
+@import 'components/figures';
