--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,71 +1,33 @@
+
 h2 {
-  color: #576671;
-  font-family: 'Raleway', sans-serif;
-  font-size: 60px;
-  font-weight: 200;
+  color: $headline-color;
   letter-spacing: 1.5px;
 }
 
+h3 {
+  text-align: center;
+  letter-spacing: 0.45px;
+}
 
-
+h4 {
+  color: $headline-color;
+  line-height: 95.82px;
+  letter-spacing: 1.5px;
+  margin: 0;
+}
 
 .about-us {
-
   h3 {
-    color: #87949e;
-    text-align: center;
-    font-family: "Proxima Nova - Regular";
-    font-weight: 400;
-    letter-spacing: 0.45px;
-
+    color: $description-color;
     ul {
       display: flex;
       justify-content: space-between;
     }
   }
-
 }
-.container {
-
-
-
-    .circle {
-      width: 182px;
-      height: 182px;
-      border-radius: 50%;
-      margin: 0 auto 86px;
-
-
-      background: {
-        url:("../img/rocket.png") no-repeat;
-        position: center;
-        color: #edeff0;
-      }
-
-      &:hover {
-
-        background: {
-        url:("../img/rocket.png") no-repeat;
-          position: center;
-          color: $main-color;
-        }
-        opacity: 1;
-        transition: 0.5s;
-
-      }
-
-    }
-  }
-
-
-
-
 
 .name {
   color: #000000;
-  font-family: 'Raleway', sans-serif;
-  font-size: 30px;
-  font-weight: 400;
   line-height: 96px;
   letter-spacing: 0.75px;
   text-align: center;
@@ -74,28 +36,25 @@ h2 {
 
 .description {
   display: block;
-  color: #87949e;
-  font-family: "Proxima Nova";
-  font-size: 18px;
-  font-weight: 400;
+  color: $description-color;
   line-height: 30px;
   letter-spacing: 0.45px;
 }
 
 .lorem-grey {
   background-color: #f9f9fa;
-  position: relative;
   padding: 165px 0;
 }
 
 .div {
   width: 717px;
-
+  .link {
+    margin-top: 74px;
+  }
 }
 
 .founder-info {
   padding: 180px 0 147px;
-
   background: {
     image: url("../img/Photo2.png");
     size: cover;
@@ -104,56 +63,39 @@ h2 {
   .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    position: relative;
   }
 
   h2 {
     color: #ffffff;
-    font-family: Raleway;
-    font-size: 30px;
-    font-weight: 300;
-    line-height: 96px;
+    font: {
+      size: 30px;
+      weight: 300;
+    }
     letter-spacing: 0.75px;
+    text-align: center;
+    span {
+      color: $main-color;
+    }
   }
 
   h3 {
     opacity: 0.3;
     color: #ffffff;
-    font-family: Raleway;
-    font-size: 18px;
-    font-weight: 300;
-    line-height: 96px;
-    letter-spacing: 0.45px;
   }
-
 }
 
 .our-services {
   background-color: #f9f9fa;
   padding: 156px 0 108px;
-
   ul {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
-
 
   h3 {
-    color: #87949e;
-    text-align: center;
-    font-family: "Proxima Nova - Regular";
-    font-weight: 400;
-    letter-spacing: 0.45px;
-  }
-
-  h4 {
-    color: #576671;
-    font-family: 'Raleway', sans-serif;
-    font-size: 60px;
-    font-weight: 400;
-    line-height: 95.82px;
-    letter-spacing: 1.5px;
-    margin: 0;
+    color: $description-color;
   }
 
   li {
@@ -167,10 +109,7 @@ h2 {
     }
 
     span {
-      color: #87949e;
-      font-family: "Proxima Nova", serif;
-      font-size: 18px;
-      font-weight: 400;
+      color: $description-color;
       line-height: 47.91px;
       letter-spacing: 0.45px;
     }
@@ -184,113 +123,100 @@ h2 {
 }
 
 .services {
-
-    display: flex;
-    justify-content: space-between;
-
+  display: flex;
+  justify-content: space-between;
   margin: 156px 0 170px;
+
   li {
     width: 292px;
   }
-}
-
-.bag {
-  background: url("../img/bag.png") no-repeat;
-}
-
-.pen {
-  background: url("../img/pen.png") no-repeat;
-}
-
-.square {
-  background: url("../img/square.png") no-repeat;
-}
-
-.rocket {
-  background: url("../img/rocket-small.png") no-repeat;
 }
 
 .team {
   padding-top: 112px;
 }
 
-.width {
-  max-width: 2000px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .team-photo {
   display: flex;
-  flex-wrap: wrap;
+  flex: {
+    direction: row;
+    wrap: wrap;
+  }
   align-items: center;
-  margin-top: 111px;
+  width: 2000px;
+  margin: 111px auto 0;
 
   li {
     width: 400px;
     height: 400px;
+    display: flex;
+    align-items: center;
 
     span {
       color: #ffffff;
-      font-family: 'Raleway', sans-serif;
-      font-size: 36px;
-      font-weight: 400;
       line-height: 96px;
       letter-spacing: 0.9px;
+      margin: 0 auto;
     }
   }
 
-  li:hover {
-    background-color: $main-color;
-    transition: 0.5s;
-  }
-
   li:nth-child(2n+1) {
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
+    background-color: #efefef;
   }
 
   li:nth-child(2n) {
     background-color: #f9f9fa;
   }
-}
 
-.pricing {
-  background-color: #f9f9fa;
+  li:hover {
+    background-color: $main-color;
+    transition: 0.5s;
+    cursor: pointer;
+  }
 }
 
 .price {
   display: flex;
   justify-content: space-between;
-  width: 345px;
-  box-shadow: 0 0 35px rgba(227, 227, 227, 0.65);
-  border-radius: 5px;
-  background-color: #ffffff;
+  margin-top: 107px;
+
+  li {
+    width: 345px;
+    box-shadow: 0 0 35px rgba(227,227,227,0.65);
+    border-radius: 5px;
+    background-color: #ffffff;
+  }
+
   h2 {
     color: $main-color;
+    margin-left: 33px;
   }
+
+  span {
+    margin-left: 33px;
+  }
+}
+
+.text {
+  margin: 0 70px 75px 33px;
+  line-height: 45px;
 }
 
 .line {
   width: 345px;
-  height: 1px;
+  height: 2px;
   background-color: #eef0f1;
-  margin: 64px 0;
+  margin: 58px 0;
 }
 
 .purchase {
-  width: 403px;
   height: 73px;
   background-color: $main-color;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   span {
     color: #ffffff;
-    font-family: "Proxima Nova", serif;
-    font-size: 18px;
-    font-weight: 700;
     line-height: 48px;
     text-transform: uppercase;
     letter-spacing: 0.45px;
@@ -301,9 +227,7 @@ h2 {
   display: flex;
   align-items: center;
   position: relative;
-  img {
-    //position: absolute;
-  }
+  padding: 120px 0;
 }
 
 .try-template {
@@ -312,18 +236,19 @@ h2 {
     size: cover;
     position: center;
   }
+  .link {
+    border: none;
+  }
 
   h2 {
     color: #ffffff;
-    font-family: 'Raleway', sans-serif;
-    font-size: 60px;
-    font-weight: 400;
+    font: {
+      weight: 400;
+    }
     line-height: 96px;
   }
-
   text-align: center;
   .link {
-    margin: 0 auto;
-    margin-top: 100px;
+    margin: 100px auto 0;
   }
 }
