--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,1 +1,6 @@
 $main-color: #17daa3;
+$proxima: "Proxima Nova", sans-serif;
+$raleway: 'Raleway', sans-serif;
+
+$headline-color: #576671;
+$description-color: #87949e;
